--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ license = "Apache 2.0"
 python = "<3.11,>=3.7.1"
 requests = "^2.25.1"
 singer-sdk = "^0.5.0"
+beautifulsoup4 = "^4.12.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
