Rename tap sdk and point to pypi version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ license = "Apache 2.0"
 python = "<3.11,>=3.7.1"
 requests = "^2.25.1"
 beautifulsoup4 = "^4.12.3"
-tap-hotglue-sdk = {git = "https://github.com/hotgluexyz/HotglueTapSDK.git", rev = "feature/hgi-9066"}
+hotglue-tap-sdk = "1.0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
