--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,8 @@ license = "Apache 2.0"
 [tool.poetry.dependencies]
 python = "<3.11,>=3.7.1"
 requests = "^2.25.1"
-singer-sdk = "^0.5.0"
 beautifulsoup4 = "^4.12.3"
+hotglue-tap-sdk = "1.0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
